# local-search-shortcuts

./: .gitignore  Cargo.toml  README.md  bang.json  build.rs  flake.nix  local-search-shortcuts.toml  lss.toml  shell.nix
res/: local-search-shortcuts.nix
src/: config.rs  engines.rs  info.rs  main.rs  shared.rs
