[package]
name = "lss"
version = "1.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tiny_http = "0.12.0"
color-eyre = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.22"
dirs = "6.0.0"
urlencoding = "2.1.3"
indexmap = { version = "2.9.0", features = ["serde"] }
bincode = { version = "2.0.1", features = ["serde"] }
compact_str = { version = "0.9.0", features = ["serde"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
indexmap = { version = "2.9.0", features = ["serde"] }
bincode = { version = "2.0.1", features = ["serde"] }
compact_str = { version = "0.9.0", features = ["serde"] }
