[package]
name = "local-search-shortcuts"
version = "1.2.2"
edition = "2021"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tiny_http = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.22"
dirs = "6.0.0"
urlencoding = "2.1.3"
indexmap = "2.13"
compact_str = { version = "0.9.0", features = ["rkyv"] }
rkyv = { version = "0.8.15", features = ["indexmap-2"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
indexmap = "2.13"
compact_str = { version = "0.9.0", features = ["serde", "rkyv"] }
rkyv = { version = "0.8.15", features = ["indexmap-2", "alloc"] }
